Fixed code highlighting styles stuck in dark mode

--- a/app/resources/css/app.css
+++ b/app/resources/css/app.css
@@ -4,8 +4,13 @@
 @import "@fortawesome/fontawesome-free/css/brands.css";
 @import "@fortawesome/fontawesome-free/css/solid.css";
 
-@import 'highlight.js/styles/github.css';
-@import 'highlight.js/styles/github-dark.css';
+.light {
+    @import 'highlight.js/styles/github.css';
+}
+
+.dark {
+    @import 'highlight.js/styles/github-dark.css';
+}
 
 @import "tailwindcss";
 
